--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -41,6 +41,10 @@ header {
     text-align: center;
 }
 
+main {
+    min-height: calc(100vh - 190px);
+}
+
 h2 {
     width: fit-content;
     font-size: 1.8rem;
@@ -97,13 +101,13 @@ h2 {
     top: 0;
     height: 100vh;
     width: 100vw;
-    background: linear-gradient(
+    /* background: linear-gradient(
             180deg,
             rgba(0, 0, 0, 0.25) 19.27%,
             rgba(0, 0, 0, 0) 29.17%
         ),
         top / 100% no-repeat
-            url("https://pics.filmaffinity.com/Deadpool-777527803-large.jpg");
+            url("https://pics.filmaffinity.com/Deadpool-777527803-large.jpg"); */
 }
 
 .main-section {
@@ -339,12 +343,13 @@ h2 {
 }
 
 .movie-details__title {
-    font-size: 2.4rem;
-    margin-left: 20px;
+    font-size: 2rem;
+    margin: 0 40px 0 20px;
 }
 
 .movie-details__categories {
     display: flex;
+    flex-wrap: wrap;
     gap: 10px;
     margin: 0 20px 10px;
     font-size: 1.4rem;
