--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -4,396 +4,433 @@ font-family: 'Poppins', sans-serif;
 font-family: 'Righteous', cursive; */
 
 :root {
-    --cream: #fcf8e8;
-    --green-dark: #94b49f;
-    --green-light: #c3d5c9;
-    --orange-dark: #df7861;
-    --orange-light: #ecb390;
-    --black: #413f42;
-    --white: #eeeeee;
-    --principal-font: "Righteous", "Poppins", sans-serif;
-    --secondary-font: "Alfa Slab One", sans-serif;
-    --title-font: "Poppins", sans-serif;
+  --cream: #fcf8e8;
+  --green-dark: #94b49f;
+  --green-light: #c3d5c9;
+  --orange-dark: #df7861;
+  --orange-light: #ecb390;
+  --black: #413f42;
+  --white: #eeeeee;
+  --principal-font: "Righteous", "Poppins", sans-serif;
+  --secondary-font: "Alfa Slab One", sans-serif;
+  --title-font: "Poppins", sans-serif;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html {
-    font-size: 62.5%;
-    margin: 0cm;
+  font-size: 62.5%;
+  margin: 0cm;
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    background-color: var(--cream);
-    font-family: var(--principal-font);
-    color: var(--black);
+  display: flex;
+  flex-direction: column;
+  background-color: var(--cream);
+  font-family: var(--principal-font);
+  color: var(--black);
 }
 
 header {
-    width: 100%;
-    position: relative;
-    text-align: center;
+  width: 100%;
+  position: relative;
+  text-align: center;
 }
 
 main {
-    min-height: calc(100vh - 190px);
+  min-height: calc(100vh - 190px);
 }
 
 h2 {
-    width: fit-content;
-    font-size: 1.8rem;
-    margin-left: 20px;
-    margin-bottom: 14px;
-    padding: 3px 5px;
-    border-bottom: 4px solid var(--green-light);
-    color: var(--green-dark);
-    font-family: var(--principal-font);
-    font-weight: bold;
+  width: fit-content;
+  font-size: 1.8rem;
+  margin-left: 20px;
+  margin-bottom: 14px;
+  padding: 3px 5px;
+  border-bottom: 4px solid var(--green-light);
+  color: var(--green-dark);
+  font-family: var(--principal-font);
+  font-weight: bold;
 }
 
 h2 a {
-    color: var(--green-dark);
-    text-decoration: none;
+  color: var(--green-dark);
+  text-decoration: none;
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #bdb9a8;
-    border-radius: 10px;
+  background-color: #bdb9a8;
+  border-radius: 10px;
 }
 
 ::-webkit-scrollbar {
-    width: 7px;
-    opacity: 0.1;
+  width: 7px;
+  opacity: 0.1;
 }
 
 ::-webkit-scrollbar-button {
-    display: none;
+  display: none;
 }
 
 .logo {
-    height: 80px;
-    margin: 35px auto 20px;
+  height: 80px;
+  margin: 35px auto 20px;
 }
 
 .back-icon {
-    position: absolute;
-    top: calc(50% - 13px);
-    left: 20px;
-    font-size: 2rem;
+  position: absolute;
+  top: calc(50% - 13px);
+  left: 20px;
+  font-size: 2rem;
 }
 
 .back-icon:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .search-header {
-    margin: 50px auto;
+  margin: 50px auto;
 }
 
 .category-title {
-    margin: 30px 40px;
-    font-size: 2.5rem;
+  margin: 30px 40px;
+  font-size: 2.5rem;
 }
 
 .movie-details-header {
-    position: fixed;
-    top: 0;
-    height: 100vh;
-    width: 100vw;
-    /* background: linear-gradient(
-            180deg,
-            rgba(0, 0, 0, 0.25) 19.27%,
-            rgba(0, 0, 0, 0) 29.17%
-        ),
-        top / 100% no-repeat
-            url("https://pics.filmaffinity.com/Deadpool-777527803-large.jpg"); */
+  position: fixed;
+  top: 0;
+  height: 100vh;
+  width: 100vw;
 }
 
 .main-section {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    gap: 30px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 30px;
 }
 
 .searcher {
-    width: 100%;
+  width: 100%;
 }
 
 .searcher__bar {
-    display: flex;
-    align-items: center;
-    width: 85%;
-    min-width: 300px;
-    max-width: 500px;
-    margin: 20px auto 10px;
-    outline-offset: -1px;
-    outline: 3px solid var(--orange-dark);
-    border-radius: 5px;
-    height: 40px;
-    overflow: hidden;
-    background-color: var(--orange-dark);
+  display: flex;
+  align-items: center;
+  width: 85%;
+  min-width: 300px;
+  max-width: 500px;
+  margin: 20px auto 10px;
+  outline-offset: -1px;
+  outline: 3px solid var(--orange-dark);
+  border-radius: 5px;
+  height: 40px;
+  overflow: hidden;
+  background-color: var(--orange-dark);
 }
 
 .searcher__bar input {
-    width: calc(100% - 40px);
-    height: 100%;
-    padding-left: 10px;
-    border: 1px solid transparent;
-    outline: none;
-    font-size: 1.4rem;
-    font-family: var(--secondary-font);
-    color: var(--black);
-    background-color: var(--cream);
+  width: calc(100% - 40px);
+  height: 100%;
+  padding-left: 10px;
+  border: 1px solid transparent;
+  outline: none;
+  font-size: 1.4rem;
+  font-family: var(--secondary-font);
+  color: var(--black);
+  background-color: var(--cream);
+}
+
+input[type="search"]::-webkit-search-cancel-button {
+  -webkit-appearance: none;
 }
 
 .searcher__bar span {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 40px;
-    height: 40px;
-    font-size: 15px;
-    color: var(--cream);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  font-size: 15px;
+  color: var(--cream);
 }
 
 .searcher__bar span:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .container-movies {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    height: 220px;
-    padding: 0 20px;
-    overflow-x: scroll;
-    overflow-y: visible;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  height: 220px;
+  padding: 0 20px;
+  overflow-x: scroll;
+  overflow-y: visible;
 }
 
 .container-movies::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
 .movie-item {
-    display: flex;
-    flex-direction: column;
-    height: fit-content;
-    border: 4px solid var(--green-dark);
-    border-radius: 5px;
-    text-align: center;
-    color: var(--cream);
-    background-color: var(--green-dark);
-    transition: opacity 300ms ease-in-out;
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
+  min-width: 128px;
+  border: 4px solid var(--green-dark);
+  border-radius: 5px;
+  text-align: center;
+  color: var(--cream);
+  background-color: var(--green-dark);
+  transition: opacity 300ms ease-in-out;
 }
 
 .movie-item img {
-    height: 180px;
-    filter: sepia(0.2) grayscale(0.1);
-    transition: filter 300ms ease-in-out;
+  height: 180px;
+  filter: sepia(0.2) grayscale(0.1);
+  transition: filter 300ms ease-in-out;
 }
 
 .movie-item__title {
-    display: none;
-    padding: 3px;
-    max-width: 135px;
+  display: none;
+  padding: 3px;
+  max-width: 135px;
 }
 
 .container-movies:hover .movie-item {
-    opacity: 0.7;
-    filter: grayscale(1);
+  opacity: 0.7;
+  filter: grayscale(1);
 }
 
 .container-movies .movie-item:hover {
-    cursor: pointer;
-    opacity: 1;
-    filter: none;
+  cursor: pointer;
+  opacity: 1;
+  filter: none;
 }
 
 .movie-item:hover .movie-item__title {
-    display: block;
+  display: block;
 }
 
 .movie-item:hover img {
-    filter: none;
+  filter: none;
 }
 
 .categories {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    gap: 30px;
-    padding: 0 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  gap: 30px;
+  padding: 0 20px;
 }
 
 .categories h2 {
-    margin: 0;
+  margin: 0;
 }
 
 .popular-categories {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, 110px);
-    gap: 20px 20px;
-    justify-content: center;
-    width: 100%;
-    max-width: 1000px;
-    padding-bottom: 40px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 110px);
+  gap: 20px 20px;
+  justify-content: center;
+  width: 100%;
+  max-width: 1000px;
+  padding-bottom: 40px;
 }
 
 .categories li {
-    position: relative;
-    height: 45px;
-    border-radius: 3px;
-    outline-offset: -3px;
-    outline: 1px solid var(--cream);
-    background-color: var(--green-light);
-    list-style: none;
-    width: 110px;
-    transition: background-color 200ms ease-in-out;
+  position: relative;
+  height: 45px;
+  border-radius: 3px;
+  outline-offset: -3px;
+  outline: 1px solid var(--cream);
+  background-color: var(--green-light);
+  list-style: none;
+  width: 110px;
+  transition: background-color 200ms ease-in-out;
 }
 
 .categories li:hover {
-    background-color: var(--green-dark);
+  background-color: var(--green-dark);
 }
 
 .categories a {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 4px;
-    height: 100%;
-    padding: 0 10px;
-    text-decoration: none;
-    color: var(--black);
-    font-size: 1.2rem;
-    font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 4px;
+  height: 100%;
+  padding: 0 10px;
+  text-decoration: none;
+  color: var(--black);
+  font-size: 1.2rem;
+  font-weight: bold;
 }
 
 .categories li::before {
-    content: "";
-    position: absolute;
-    top: calc(50% - 12px);
-    left: -10px;
-    width: 16px;
-    height: 24px;
-    border-radius: 50%;
-    background-color: var(--cream);
+  content: "";
+  position: absolute;
+  top: calc(50% - 12px);
+  left: -10px;
+  width: 16px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: var(--cream);
 }
 
 .categories li::after {
-    content: "";
-    position: absolute;
-    top: calc(50% - 12px);
-    right: -10px;
-    width: 16px;
-    height: 24px;
-    border-radius: 50%;
-    background-color: var(--cream);
+  content: "";
+  position: absolute;
+  top: calc(50% - 12px);
+  right: -10px;
+  width: 16px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: var(--cream);
 }
 
 .popular-categories a span {
-    width: min-content;
+  width: min-content;
 }
 
 /* Search section */
 .generic-section__container {
-    display: grid;
-    justify-content: center;
-    justify-items: center;
-    align-items: center;
-    grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
-    grid-auto-rows: 220px;
-    gap: 20px;
-    padding: 20px;
+  display: grid;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+  grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
+  grid-auto-rows: 220px;
+  gap: 20px;
+  padding: 20px;
 }
 
 .generic-section__container .movie-item img {
-    height: 200px;
+  height: 200px;
 }
 
 .generic-section__container .movie-item:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 /* Movie details section */
 .movie-details-section {
-    position: relative;
-    bottom: -50px;
-    z-index: 2;
-    display: flex;
-    flex-direction: column;
-    gap: 14px;
-    margin-top: 50vh;
-    padding: 25px 0 10px;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    background-color: var(--green-dark);
+  position: relative;
+  bottom: -50px;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+  margin-top: 50vh;
+  padding: 25px 0 10px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  background-color: var(--green-dark);
 }
 
 .close-icon {
-    position: absolute;
-    right: 20px;
-    font-size: 2rem;
+  position: absolute;
+  right: 20px;
+  font-size: 2rem;
 }
 
 .close-icon:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .movie-details__title {
-    font-size: 2rem;
-    margin: 0 40px 0 20px;
+  font-size: 2rem;
+  margin: 0 40px 0 20px;
 }
 
 .movie-details__categories {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    margin: 0 20px 10px;
-    font-size: 1.4rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin: 0 20px 10px;
+  font-size: 1.4rem;
 }
 
 .movie-details__description {
-    font-size: 1.6rem;
-    margin: 0 20px 20px;
+  font-size: 1.6rem;
+  margin: 0 20px 20px;
 }
 
 .similar h2 {
-    margin-bottom: 10px;
-    color: var(--black);
-    border-bottom-color: #4f4e50;
+  margin-bottom: 10px;
+  color: var(--black);
+  border-bottom-color: #4f4e50;
 }
 
 .similar-container .movie-item {
-    color: var(--black);
+  color: var(--black);
 }
 
 .footer {
-    position: sticky;
-    bottom: 0;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 50px;
-    width: 100%;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-    background-color: var(--orange-dark);
+  position: sticky;
+  bottom: 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 50px;
+  width: 100%;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  background-color: var(--orange-dark);
 }
 
 .footer a {
-    text-decoration: none;
-    font-size: 2rem;
-    color: var(--cream);
+  text-decoration: none;
+  font-size: 2rem;
+  color: var(--cream);
 }
 
 .hidden {
-    display: none;
+  display: none;
+}
+
+.movie-item-skeleton {
+  min-width: 128px;
+  height: 188px;
+  border-radius: 5px;
+  background-color: var(--green-light);
+  animation: loading-effect 1.5s infinite;
+}
+
+.movie-item-skeleton:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.fade {
+  animation: fade 1s ease-in-out;
+}
+
+.fade-text {
+  animation: fade 0.3s ease-in-out;
+}
+
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes loading-effect {
+  0%,
+  100% {
+    background-color: var(--green-light);
+  }
+  50% {
+    background-color: var(--green-dark);
+  }
 }
