--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -193,6 +193,8 @@ input[type="search"]::-webkit-search-cancel-button {
 
 .movie-item img {
   height: 180px;
+  aspect-ratio: 2/3;
+  object-fit: cover;
   filter: sepia(0.2) grayscale(0.1);
   transition: filter 300ms ease-in-out;
 }
@@ -306,7 +308,7 @@ input[type="search"]::-webkit-search-cancel-button {
   justify-content: center;
   justify-items: center;
   align-items: center;
-  grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
   grid-auto-rows: 220px;
   gap: 20px;
   padding: 20px;
@@ -323,7 +325,7 @@ input[type="search"]::-webkit-search-cancel-button {
 /* Movie details section */
 .movie-details-section {
   position: relative;
-  bottom: -50px;
+  bottom: -100px;
   z-index: 2;
   display: flex;
   flex-direction: column;
